--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -1,125 +1,130 @@
 {% extends "dashboard/index.html" %}
 {% load static %}
 {% block content %}
-<link rel="stylesheet" type="text/css"
-              href="{% static 'high_schools/css/high_school.css' %}">
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'high_schools/css/high_school.css' %}">
     <div style="width: 100%;">
         <div class="container-fluid">
-        {% if applications %}
-            <div class="dropdown" style="text-align: right; line-height: 2.5;"><b>Filter
-                by
-                Program:</b>
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
-                   id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false"
-                   style="float: right; margin-right: 2em; margin-left: 1em">
-                    {{ current_program }}
-                </a>
+            {% if applications %}
+                <div class="dropdown" style="text-align: right; line-height: 2.5;"><b>Filter
+                    by
+                    Program:</b>
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
+                       id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                       aria-expanded="false"
+                       style="float: right; margin-right: 2em; margin-left: 1em">
+                        {{ current_program }}
+                    </a>
 
-                {% if programs %}
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item"
-                           href="{% url "dashboard:admissions:index" %}">ALL</a>
-                        {% for program in programs %}
+                    {% if programs %}
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item"
-                               href="{% url "dashboard:admissions:index" %}?p={{ program.id }}">{{ program.name }}</a>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            </div>
-            {% for app in applications %}
-                {% if app.application_status == 2 %}
-                    <div class="card"
-                         style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
-                        <div class="card-header" style="background-color: #CDE6EC"><b>
-                            {{ app.first_name }} {{ app.last_name }}
-                            <span style="float: right">{{ app.application_number }}/Pending
-                    </span>
-                        </b>
+                               href="{% url "dashboard:admissions:index" %}">ALL</a>
+                            {% for program in programs %}
+                                <a class="dropdown-item"
+                                   href="{% url "dashboard:admissions:index" %}?p={{ program.id }}">{{ program.name }}</a>
+                            {% endfor %}
                         </div>
-                        <div class="card-body">
-                            <div class="card-text" style="align-items: center;">
+                    {% endif %}
+                </div>
+                {% for app in applications %}
+                    {% if app.application_status == 2 %}
+                        <div class="card"
+                             style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                            <div class="card-header" style="background-color: #CDE6EC">
+                                <b>
+                                    {{ app.first_name }} {{ app.last_name }}
+                                    <span style="float: right">{{ app.application_number }}/Pending
+                    </span>
+                                </b>
+                            </div>
+                            <div class="card-body">
+                                <div class="card-text" style="align-items: center;">
                             <span>
                                 Program: {{ app.program }}
                             </span>
-                                <span style="float: right">
+                                    <span style="float: right">
                                 <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                    class="btn btn-primary"
                                 >View Application</a>
                             </span>
-                                <footer class="blockquote-footer"
-                                        style="margin-top:1em;">Date of Submission:
-                                    {{ app.submitted_date }}
-                                </footer>
+                                    <footer class="blockquote-footer"
+                                            style="margin-top:1em;">Date of Submission:
+                                        {{ app.submitted_date }}
+                                    </footer>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% elif app.application_status == 1 %}
-                    <div class="card"
-                         style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
-                        <div class="card-header" style="background-color: #b3e6b3"><b>
-                            {{ app.first_name }} {{ app.last_name }}
-                            <span style="float: right">{{ app.application_number }}/Accepted
+                    {% elif app.application_status == 1 %}
+                        <div class="card"
+                             style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                            <div class="card-header" style="background-color: #b3e6b3">
+                                <b>
+                                    {{ app.first_name }} {{ app.last_name }}
+                                    <span style="float: right">{{ app.application_number }}/Accepted
                     </span>
-                        </b>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text" style="align-items: center;">
+                                </b>
+                            </div>
+                            <div class="card-body">
+                                <div class="card-text" style="align-items: center;">
                             <span>
                                 Program: {{ app.program }}
                             </span>
-                                <span style="float: right">
+                                    <span style="float: right">
                                 <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                    class="btn btn-primary"
                                 >View Application</a>
                             </span>
-                                <footer class="blockquote-footer"
-                                        style="margin-top:1em;">Date of Submission:
-                                    {{ app.submitted_date }}
-                                </footer>
+                                    <footer class="blockquote-footer"
+                                            style="margin-top:1em;">Date of Submission:
+                                        {{ app.submitted_date }}
+                                    </footer>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% elif app.application_status == 0 %}
-                    <div class="card"
-                         style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
-                        <div class="card-header" style="background-color: #ffcccc"><b>
-                            {{ app.first_name }} {{ app.last_name }}
-                            <span style="float: right">{{ app.application_number }}/Rejected
+                    {% elif app.application_status == 0 %}
+                        <div class="card"
+                             style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                            <div class="card-header" style="background-color: #ffcccc">
+                                <b>
+                                    {{ app.first_name }} {{ app.last_name }}
+                                    <span style="float: right">{{ app.application_number }}/Rejected
                     </span>
-                        </b>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text" style="align-items: center;">
+                                </b>
+                            </div>
+                            <div class="card-body">
+                                <div class="card-text" style="align-items: center;">
                             <span>
                                 Program: {{ app.program }}
                             </span>
-                                <span style="float: right">
+                                    <span style="float: right">
                                 <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                    class="btn btn-primary"
                                 >View Application</a>
                             </span>
-                                <footer class="blockquote-footer"
-                                        style="margin-top:1em;">Date of Submission:
-                                    {{ app.submitted_date }}
-                                </footer>
+                                    <footer class="blockquote-footer"
+                                            style="margin-top:1em;">Date of Submission:
+                                        {{ app.submitted_date }}
+                                    </footer>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
+                    {% endif %}
+                {% endfor %}
 
-        {% else %}
-            {% if unauth %}
-                {% block broken %}
-                    {% include 'admissions/broken.html' %}
-                {% endblock %}
-            {% elif not applications %}
-                {% block empty_list %}
-                    {% include 'admissions/broken.html' %}
-                {% endblock %}
+            {% else %}
+                {% if unauth %}
+                    {% block broken %}
+                        {% include 'admissions/broken.html' %}
+                    {% endblock %}
+                {% elif not applications %}
+                    <div style="width: 100%;">
+                        <div class="container-fluid" style="text-align: center">
+                            There are no applications available.
+                        </div>
+                    </div>
+                {% endif %}
             {% endif %}
-        {% endif %}
         </div>
     </div>
 {% endblock %}
